# ft_scop

./: CMakeLists.txt  Scop_App.cpp  Scop_App.hpp  Scop_Device.cpp  Scop_Device.hpp  Scop_Swap_Chain.cpp  Scop_Swap_Chain.hpp  Scop_Window.cpp  Scop_Window.hpp  Scope_Pipeline.cpp  Scope_Pipeline.hpp  compile.sh  main.cpp
shaders/: simple_shader.frag  simple_shader.vert
